feat: add RBAC using JWT with role-based authorization